--- a/style.css
+++ b/style.css
@@ -7,13 +7,14 @@ html {
     scroll-behavior: smooth;
 }
 body {
+    background-color: rgb(222, 255, 212);
     height: 100vh;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 header {
     height: 80px;
     padding: 10px;
-    background: rgb(92, 218, 123);
+    background: rgb(255, 255, 255);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,15 +41,37 @@ section {
 .botaol{
     position: absolute; 
     top: 20px;        
-    right: 50px; 
-    background-color: rgb(255, 255, 255);
-    
-
+    right: 20px; 
+    background-color: #dbda75;
 }
 .imagem{
-    height: 60px;
-    width: 100px;
+    height: 70px;
+    width: 120px;
     position: absolute;
-    top: 10px;
-    left: 60px;
+    top: 2px;
+    left: 5px;
 }
+.botao1{
+  padding: 5px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 20px;
+  background: #dbda75;
+  cursor: pointer;
+  /* Animação suave */
+  transition: transform 0.5s ease, box-shadow 0.3s ease;
+}
+button:hover {
+  transform: scale(1.1); /* aumenta 10% */
+  box-shadow: 0 6px 15px rgba(2, 15, 92, 0.2);
+}
+.imagem {
+      border-radius: 12px;
+      cursor: pointer;
+      transition: transform 0.5s ease, box-shadow 0.5s ease;
+    }
+
+img:hover {
+      transform: scale(1.1); /* aumenta 10% */
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    }
