--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
     align-items: center;
     position: fixed;
     width: 100%;
-    padding-top: 1.0%;
+    padding-top: 1.5%;
 }
 li {
     list-style: none;
@@ -29,27 +29,21 @@ li {
 }
 a {
     text-decoration: none;
-    color: rgb(248, 248, 248);   
+    color: rgb(0, 0, 0);   
     font-size: larger;
-}
-section {
-    height: calc(100vh - 80px); 
-    padding-top: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 .botaoA{
     position: absolute; 
     top: 20px;        
     right: 20px; 
-    background-color: #dbda75;
+    background-color: #44a5ff;
+
 }
 .botaoB{
     position: absolute; 
     top: 20px;        
     right: 100px; 
-    background-color: #dbda75;
+    background-color: #44a5ff;
 }
 .imagem{
     height: 70px;
@@ -63,14 +57,14 @@ section {
   font-size: 16px;
   border: none;
   border-radius: 20px;
-  background: #dbda75;
+  border-color: blue;
   cursor: pointer;
   /* Animação suave */
   transition: transform 0.5s ease, box-shadow 0.3s ease;
 }
 button:hover {
   transform: scale(1.1); /* aumenta 10% */
-  box-shadow: 0 6px 15px rgba(2, 15, 92, 0.2);
+  box-shadow: 0 6px 15px rgba(0, 0, 255, 0.2);
 }
 .imagem {
       border-radius: 12px;
@@ -81,4 +75,18 @@ button:hover {
 img:hover {
       transform: scale(1.1); /* aumenta 10% */
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    }
+    .botao1{
+        display: inline-block;
+        padding: 0.4em 1.2em;
+        background: rgb(255, 255, 255);
+        color: #000000;
+        text-decoration: none;
+        border-radius: 100px;
+        transition: transform 0.5s ease;
+    }
+    .botao1:hover{
+        transform: scale(1.1);
+        background-color: rgb(198, 245, 194);
+        box-shadow: 0 4px 12px rgba(red, green, blue, alpha);
     }
