--- a/style.css
+++ b/style.css
@@ -7,9 +7,13 @@ html {
     scroll-behavior: smooth;
 }
 body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100vh;
     background-color: rgb(222, 255, 212);
     height: 100vh;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: roboto;
 }
 header {
     height: 80px;
@@ -21,6 +25,8 @@ header {
     position: fixed;
     width: 100%;
     padding-top: 1.5%;
+}
+.topbar{
 }
 li {
     list-style: none;
@@ -45,7 +51,7 @@ a {
     right: 100px; 
     background-color: #44a5ff;
 }
-.imagem{
+.image{
     height: 70px;
     width: 120px;
     position: absolute;
@@ -66,16 +72,6 @@ button:hover {
   transform: scale(1.1); /* aumenta 10% */
   box-shadow: 0 6px 15px rgba(0, 0, 255, 0.2);
 }
-.imagem {
-      border-radius: 12px;
-      cursor: pointer;
-      transition: transform 0.5s ease, box-shadow 0.5s ease;
-    }
-
-img:hover {
-      transform: scale(1.1); /* aumenta 10% */
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    }
     .botao1{
         display: inline-block;
         padding: 0.4em 1.2em;
